--- a/food-web/src/main/resources/static/food_find.html
+++ b/food-web/src/main/resources/static/food_find.html
@@ -22,6 +22,9 @@
 
     <!-- CORE CSS TEMPLATE - START -->
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <!--分页-->
+    <link rel="stylesheet" href="css/pagination.css">
+
 
 </head>
 <body class=" ">
@@ -541,45 +544,60 @@
     <!-- START CONTENT -->
     <section id="main-content" class=" ">
         <div class='col-xs-12'>
-            <div class="page-title">
+            <!--            <div class="page-title">-->
 
-                <div class="pull-left">
-                    <!-- PAGE HEADING TAG - START -->
-                    <h1 class="title">定格</h1>
-                    <!-- PAGE HEADING TAG - END -->
-                </div>
+            <!--                <div class="pull-left">-->
+            <!--                    &lt;!&ndash; PAGE HEADING TAG - START &ndash;&gt;-->
+            <!--                    <h1 class="title">定格</h1>-->
+            <!--                    &lt;!&ndash; PAGE HEADING TAG - END &ndash;&gt;-->
+            <!--                </div>-->
 
-                <div class="pull-right hidden-xs">
+            <!--                <div class="pull-right hidden-xs">-->
 
-                </div>
-            </div>
+            <!--                </div>-->
+            <br>
+        </div>
             <!--			容器-->
             <div class="col-lg-12">
                 <section class="box ">
                     <header class="panel_header">
-                        <table id="table_menu" class="table table-striped table-hover bg-info">
-                            <thead>
-                            <tr>
-                                <th>菜谱ID</th>
-                                <th>菜名</th>
-                                <th>性别</th>
-                                <th>身份证</th>
-                                <th>职位</th>
-                                <th>联系电话</th>
-                                <th>住址</th>
-                                <th>权限等级</th>
-                                <th>任职状态</th>
-                            </tr>
-                            </thead>
-                            <tbody class="tabs-left">
+                        <div class="title">
+                            <h2>菜谱查看</h2>
+                        </div>
+                        <div class="content-body">
+                            <form id="f_user_add" action="javascript:;" novalidate="novalidate">
+                                <table class="table table-hover" id="all_list">
+                                    <colgroup>
+                                        <col width="150">
+                                        <col width="200">
+                                        <col>
+                                    </colgroup>
+                                    <thead>
+                                    <tr>
+                                        <th>序号</th>
+                                        <th>菜谱ID</th>
+                                        <th>菜名</th>
+                                        <th>菜系</th>
+                                        <th>菜品</th>
+                                        <th>厨师</th>
+                                        <th>操作</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody id="tbodys">
 
-                            </tbody>
-                        </table>
+
+                                    </tbody>
+                                </table>
+                            </form>
+
+                        </div>
+
                     </header>
+                    <div id="page"></div>
                 </section>
+
             </div>
 
-        </div>
     </section>
     <!-- END CONTENT -->
 
@@ -587,6 +605,48 @@
 </div>
 <!-- END CONTAINER -->
 <!-- LOAD FILES AT PAGE END FOR FASTER LOADING -->
+
+<!--模态框-->
+<div class="modal fade" tabindex="-1" role="dialog" id="myModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">详细信息</h4>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <p> 图片:
+                    <div class="foodImage" style="width:100px;height:100px;border:1px solid"></div>
+                    </p>
+                    <p> 菜名: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜系: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜品: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜名: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜系: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜品: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜名: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜系: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                    <p> 菜品: <input type="text" name="foodName"> &nbsp;&nbsp;&nbsp;&nbsp; 工艺: <input type="text"
+                                                                                                    name="foodName"></p>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 <!-- CORE JS FRAMEWORK - START -->
 <script src="jquery/jquery-1.12.4.min.js"></script>
@@ -606,59 +666,12 @@
 
 <!-- CORE TEMPLATE JS - START -->
 <script src="js/scripts.js"></script>
+<!--分页-->
+<script src="js/jquery.pagination.js"></script>
+<script src="data/food.js"></script>
 <!-- END CORE TEMPLATE JS - END -->
 <script>
-    // $(document).ready(function () {
-    //     $('#table_menu').DataTable({
-    //         language: {
-    //             "oPaginate": {
-    //                 "sFirst": "首页",
-    //                 "sPrevious": "上一页",
-    //                 "sNext": "下一页",
-    //                 "sLast": "末页"
-    //             },
-    //             "processing": "加载中...",  //DataTables载入数据时，是否显示‘进度’提示
-    //             "info": "共 _PAGES_ 页  _TOTAL_ 条数据  ",
-    //             'sPaginationType': "full_numbers", //详细分页组，可以支持直接跳转到某页
-    //             "infoEmpty": "暂无数据",
-    //             "sLengthMenu": "显示_MENU_条 ",
-    //             "emptyTable": "暂无要处理的数据...",  //表格中无数据
-    //             "search": "搜索:",
-    //             "infoFiltered": " —— 从  _MAX_ 条数据中筛选",
-    //             "zeroRecords": "暂未查询到相关信息"
-    //         },
-    //         "ajax": {
-    //             url: "../list_employee",
-    //             type: "GET", dataSrc: function (result) {
-    //                 if (result.code === 500) {
-    //                     $("#new").append(
-    //                         //占据整个屏幕Div
-    //                         "<div id='fullScreen'></div>" +
-    //                         //浮层区
-    //                         "<div id='message-floatLayer'> <p class='big-font'>提示消息</p> <p class='small-font'>" + result.message + "</p>" +
-    //                         "<input id='hide3' type='button' class='btn-round btn-primary col-xs-3' value='关闭'>" +
-    //                         "</div>"
-    //                     );
-    //                     $("#hide3").click(function () {
-    //                         $("#fullScreen,#message-floatLayer").remove();
-    //                     });
-    //                 }
-    //                 console.log(result.data);
-    //                 return result.data;
-    //             }
-    //         },
-    //         "columns": [{'data': "userId"},
-    //             {'data': 'username'},
-    //             {'data': 'emSex'},
-    //             {'data': 'emIdentityCard'},
-    //             {'data': 'emPosition'},
-    //             {'data': 'emNumber'},
-    //             {'data': 'emAddress'},
-    //             {'data': 'emGrade'},
-    //             {'data': 'emGradeStatus'}
-    //         ]
-    //     });
-    // });
+
 </script>
 </body>
 
