--- a/food-web/src/main/resources/static/food_find.html
+++ b/food-web/src/main/resources/static/food_find.html
@@ -580,6 +580,8 @@
                                         <th>菜系</th>
                                         <th>菜品</th>
                                         <th>厨师</th>
+                                        <th>步骤</th>
+                                        <th>成品图</th>
                                         <th>操作</th>
                                     </tr>
                                     </thead>
