--- a/food-web/src/main/resources/static/video_find.html
+++ b/food-web/src/main/resources/static/video_find.html
@@ -22,6 +22,8 @@
 
     <!-- CORE CSS TEMPLATE - START -->
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <!--分页-->
+    <link rel="stylesheet" href="css/pagination.css">
 
 </head>
 <body class=" ">
@@ -555,27 +557,43 @@
             </div>
             <!--			容器-->
             <div class="col-lg-12">
+                <br>
+                <form id="find" class="form-inline" style="position:relative;left:15%;">
+                    <div class="form-group">
+                        <label for="exampleInputName2">输入查询条件</label>
+                        <input name="name" type="text" class="form-control" id="exampleInputName2" placeholder="输入菜名">
+                    </div>
+                    <button type="button" class="btn btn-default">查询</button>
+                    <select class="form-control">
+                        <option>按菜名</option>
+                        <option>按时间</option>
+                        <option>按播放量</option>
+                    </select>
+                </form>
                 <section class="box ">
                     <header class="panel_header">
-                        <table id="table_video" class="table table-striped table-hover bg-info">
+                        <table id="table_video" class="table table-hover">
                             <thead>
                             <tr>
-                                <th>视频ID</th>
-                                <th>视频作者ID</th>
-                                <th>性别</th>
-                                <th>身份证</th>
-                                <th>职位</th>
-                                <th>联系电话</th>
-                                <th>住址</th>
-                                <th>视频源</th>
-                                <th>视频状态（审核）</th>
+                                <th>#</th>
+                                <th>作者ID</th>
+                                <th>视频</th>
+                                <th>视频标签</th>
+                                <th>分类</th>
+                                <th>播放量</th>
+                                <th>上传时间</th>
+                                <th>视频审核</th>
+                                <th>查看详情</th>
+                                <th>删除</th>
+                                <th>修改</th>
                             </tr>
                             </thead>
-                            <tbody class="tabs-left">
+                            <tbody id="tcontent" class="tabs-left">
 
                             </tbody>
                         </table>
                     </header>
+                    <div id="page"></div>
                 </section>
             </div>
 
@@ -585,6 +603,50 @@
 
 
 </div>
+
+<!--视频模态框-->
+<div class="modal fade" tabindex="-1" role="dialog" id="myModal1">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">视频内容</h4>
+            </div>
+            <div class="modal-body">
+                <video id="video_src" controls="controls" preload="auto" width="525px" height="460px"></video>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div>
+
+
+<!--做法内容模态框-->
+<div class="modal fade" tabindex="-1" role="dialog" id="myModal2">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">做法介绍</h4>
+            </div>
+            <form id="upd">
+                <div class="modal-body">
+                    <input type="text" id="receive_id" name="videoId" hidden="hidden"/>
+                    <textarea id="text" name="method" style="height: 300px;width: 400px;margin-left: 60px"></textarea>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">保存修改</button>
+                </div>
+            </form>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div>
+
+
 <!-- END CONTAINER -->
 <!-- LOAD FILES AT PAGE END FOR FASTER LOADING -->
 
@@ -606,10 +668,11 @@
 
 <!-- CORE TEMPLATE JS - START -->
 <script src="js/scripts.js"></script>
+<!--分页-->
+<script src="js/jquery.pagination.js"></script>
+<script src="data/video.js"></script>
 <!-- END CORE TEMPLATE JS - END -->
 <script>
-
 </script>
 </body>
-
 </html>
