视频管理小修改

--- a/food-web/src/main/resources/static/video_update.html
+++ b/food-web/src/main/resources/static/video_update.html
@@ -558,61 +558,25 @@
                 <section class="box ">
                     <header class="panel_header">
                         <div class="title">
-                            <h2>菜谱视频添加</h2>
+                            <h2>菜谱视频详细做法添加</h2>
                         </div>
                         <div class="content-body">
-                            <form id="f_user_add" action="javascript:;" novalidate="novalidate">
+                            <form id="f_user_add" action="add_steps" method="post">
                                 <div class="row">
-
-                                    <div class="">
-
-                                        <div class="form-group col-xs-3">
-                                            <label class="form-label">标题</label>
-                                            <span class="desc">由4-8位字母+数字组成</span>
-                                            <div class="controls">
-                                                <input type="text" class="form-control" name="video_name">
-                                            </div>
+                                    <div class="form-group col-xs-4">
+                                        <label class="form-label">视频编号</label>
+                                        <span class="desc">例如:''</span>
+                                        <div class="controls">
+                                            <input type="text" class="form-control" name="videoId">
                                         </div>
-
-                                        <div class="form-group col-xs-5">
-                                            <label class="form-label">分类</label>
-                                            <span class="desc">请选择或输入相关类型</span>
-                                            <div class="controls col-md-8">
-                                                <input type="text" class="form-control" name="video_classified "/>
-                                            </div>
+                                    </div>
+                                    <div class="form-group col-xs-8" style="margin-left: 1px;margin-top: 10px">
+                                        <label class="form-label">内容</label>
+                                        <span class="desc">自定义内容</span>
+                                        <div class="controls">
+                                            <textarea type="text" class="form-control" name="method"
+                                                      style="width: 400px;height: 300px"></textarea>
                                         </div>
-                                        <div class="form-group col-xs-4">
-                                            <label class="form-label">视频</label>
-                                            <span class="desc">请选择您需要上传的视频</span>
-                                            <div class="controls">
-                                                <input type="file" class="form-control" name="video_source">
-                                            </div>
-                                        </div>
-
-                                        <div class="form-group col-xs-4">
-                                            <label class="form-label">作者编号</label>
-                                            <span class="desc">例如:''</span>
-                                            <div class="controls">
-                                                <input type="text" class="form-control" name="video_admin">
-                                            </div>
-                                        </div>
-
-                                        <div class="form-group col-xs-3">
-                                            <label class="form-label">上传时间</label>
-                                            <span class="desc">默认为当前日期时间</span>
-                                            <div class="controls">
-                                                <input type="date" class="form-control" name="video_time">
-                                            </div>
-                                        </div>
-
-                                        <div class="form-group col-xs-8">
-                                            <label class="form-label">标签</label>
-                                            <span class="desc">选择已存在标签或是自定义新的标签</span>
-                                            <div class="controls">
-                                                <input type="text" class="form-control" name="video_label">
-                                            </div>
-                                        </div>
-
                                     </div>
                                     <div class="col-md-1 btn-block">
                                         <button type="submit">提交</button>
