--- a/food-web/src/main/resources/static/video_find.html
+++ b/food-web/src/main/resources/static/video_find.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/pagination.css">
 
 </head>
-<body class=" ">
+<body onload="judge()">
 <!-- START TOPBAR -->
 <div class='page-topbar '>
     <div class='logo-area'>
@@ -639,7 +639,7 @@
                     <textarea id="text" name="method" style="height: 300px;width: 400px;margin-left: 60px"></textarea>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">保存修改</button>
+                    <button id="u" type="button" class="btn btn-primary">保存修改</button>
                 </div>
             </form>
         </div><!-- /.modal-content -->
